# hexastorm

./: .buildinfo  .gitattributes  .gitignore  .pre-commit-config.yaml  .swn  README.html  README.md  developer.md  genindex.html  index.html  install.sh  objects.inv  pyproject.toml  readme.md  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py
01_Welcome!/: 0_README.html
02_Getting_Started/: 0_Project_Setup.html
03_Design/: README.html
Notebook/: bezier.py
_sources/: index.rst
_sources/01_Welcome!/: 0_README.md
_sources/02_Getting_Started/: 0_Project_Setup.md
_sources/03_Design/: README.md
blinky_migen/: blinky.py  icezero.py
blinky_verilog/: Makefile  demo.pcf  top.v
docs/: .gitignore  README.md  _config.yml  _toc.yml  conf.py  index.rst  publish.sh  tmpt_exe.txt  tmpt_solution.txt
docs/01_Welcome!/: 0_README.md
docs/02_Getting_Started/: 0_Project_Setup.md  todo.txt
docs/03_Design/: README.md
i2c/: readme.md  setlaser.py
migen/: hexa.py  icezero.py
migen/blinkmem/: blinkmem.py
migen/blinky/: blinky.py
migen/lasertest/: laser.py
migen/memtest/: memtest.py
migen/photodiodetest/: photodiodetest.py
migen/spi_counter/: spi_counter.py  spi_counter_test.py  test_script.py
migen/spi_laserscanner/: laserscanner_test.py  spi_laserscanner.py
migen/spi_loopback/: spi_loopback.py  spi_test.py
migen/spi_mapping/: spi_mapping.py  test_script.py
migen/spi_memmapping/: README.MD  file.vcd  spi_memmapping.py  spimemtest.py
migen/spi_statemachine/: spi_statemachine.py  spi_statemachine_test.py  statedescription.md
migen_examples/: icezero.py  readme.md
migen_examples/blinky/: blinky.py
migen_examples/clockdomain/: example.py
migen_examples/lasertest/: laser.py
migen_examples/photodiodetest/: photodiodetest.py  test.py
migen_examples/pincheck/: check.py  pincheck.py
migen_examples/polygontest/: polygon.py
migen_examples/spi_counter/: spi_counter.py  spi_counter_test.py
migen_examples/spi_mapping/: spi_mapping.py  spi_mapping_test.py
migen_examples/spi_memmapping/: spi_memmapping.py
migen_examples/spi_statemachine/: spi_statemachine.py
src/FPGAG/: __init__.py  board.py  constants.py  controller.py  core.py  lasers.py  movement.py  notused.py  optical.py  platforms.py  resources.py  testcontroller.py
src/FPGAG/interpolator/: interpolator.py
src/hexastorm/: __init__.py  arithmetic.py  board.py  calibration.py  config.py  constants.py  controller.py  core.py  esp32_controller.py  lasers.py  log_setup.py  motor.py  movement.py  optical.py  platforms.py  pwm.py  resources.py  spi.py  spi_helpers.py  ulab.py  ulabext.py  utils.py
src/hexastorm/blocks/: photodiode_debounce.py
subprojects/custommotor/: driver.py  notes.md  platforms.py  readme.md  test_build.py  test_electrical.py
subprojects/old/: test_luna.py
test/: board.py  debug_spi.py  test_spi.py  test_virtual.py
test/FPGAG/: test_division.py  test_electrical.py  test_luna.py  test_optical.py  test_virtual.py
test/blinky/: blinky.py
test/debug_spi/: debug_spi.py  test_spi.py  test_virtual.py
test/memory/: board.py  memory.py
test/spicounter/: spicounter.py
tests/: electrical.py  optical.py  script.sh  test_arithmetic.py  test_build.py  test_calibration.py  test_core.py  test_electrical.py  test_esp32.py  test_interpolator.py  test_lasers.py  test_movement.py  test_optical.py  test_photodiode_debounce.py  test_scanhead.py  test_scanhead_virtual.py  test_scanheadcore.py  test_virtual.py  virtual.py
tests/calibration/: test_calibration.py  test_stacker.py
tests/camera/: camera.py  test.py  test_optical.py
tests/custommotor/: driver.py  notes.md  platforms.py  test_build.py  test_electrical.py
tests/fpga/: test_build.py  test_core.py  test_movement.py  test_photodiode_debounce.py
tests/luna_test/: test_luna.py
tests/micropython/: test_electrical.py  test_motor.py
tests/old/: test_luna.py
tests/pcbmotor/: test_motor.py
tests/tools/: test_syncable.py  test_tools.py  test_ulabext.py
(+48 files in other folders)
