[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hexastorm"
version = "0.1.0"
description = "amaranth framework for writing to a substrate with a laser"
authors = [
    { name = "Rik Starmans", email = "hstarmans@hexastorm.com" }
]
license = { file = "LICENSE.txt" }
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "fire>=0.7.1",
    "numpy>=2.4.3",
    "pillow>=12.1.1",
    "tqdm>=4.67.3",
    "ruff>=0.15.7",
    "opencv-python>=4.13.0.92",
    "amaranth-boards",
    "cairosvg>=2.9.0",
    "numba>=0.64.0",
    "nbqa>=1.9.1",
    "pytest>=9.0.2",
    "yowasp-nextpnr-ice40>=0.9.0.0.post686",
    "yowasp-yosys>=0.63.0.0.post1107",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "pyserial>=3.5",
]


[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "double"

[tool.uv.sources]
amaranth-boards = { git = "https://github.com/amaranth-lang/amaranth-boards.git", rev = "main" }

[project.scripts]
cam = "tests.camera.test_optical:main"
pat_machine = "hexastorm.interpolator.patterns.machine:main"
pat_cam = "hexastorm.interpolator.patterns.camera:main"
interpol = "hexastorm.interpolator.interpolator:main"

[tool.setuptools]
package-dir = {"" = "src", "tests" = "tests"}

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["hexastorm*", "tests*"]
